Fix checkstyle violations across codebase
This commit addresses all checkstyle violations in both athena-lark-base
and glue-lark-base-crawler modules. Changes include:

- Fixed Javadoc formatting and missing documentation
- Corrected indentation and code formatting issues
- Added proper parameter documentation
- Fixed whitespace and line length violations
- Improved code structure to meet checkstyle standards

All changes are code style improvements with no functional modifications.