@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -20,24 +20,42 @@
 package com.amazonaws.glue.lark.base.crawler.service;
 
 import software.amazon.awssdk.services.glue.GlueClient;
-import software.amazon.awssdk.services.glue.model.*;
+import software.amazon.awssdk.services.glue.model.BatchDeleteTableRequest;
+import software.amazon.awssdk.services.glue.model.CreateDatabaseRequest;
+import software.amazon.awssdk.services.glue.model.CreateTableRequest;
+import software.amazon.awssdk.services.glue.model.DataLakePrincipal;
+import software.amazon.awssdk.services.glue.model.Database;
+import software.amazon.awssdk.services.glue.model.DatabaseInput;
+import software.amazon.awssdk.services.glue.model.DeleteDatabaseRequest;
+import software.amazon.awssdk.services.glue.model.GetDatabasesRequest;
+import software.amazon.awssdk.services.glue.model.GetDatabasesResponse;
+import software.amazon.awssdk.services.glue.model.GetTablesRequest;
+import software.amazon.awssdk.services.glue.model.GetTablesResponse;
+import software.amazon.awssdk.services.glue.model.Permission;
+import software.amazon.awssdk.services.glue.model.PrincipalPermissions;
+import software.amazon.awssdk.services.glue.model.Table;
+import software.amazon.awssdk.services.glue.model.TableInput;
+import software.amazon.awssdk.services.glue.model.UpdateDatabaseRequest;
+import software.amazon.awssdk.services.glue.model.UpdateTableRequest;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.Collections;
 
 import static java.util.Objects.requireNonNull;
 
 /**
  * Service for Glue Catalog
  */
-public class GlueCatalogService {
+public class GlueCatalogService
+{
     private final GlueClient glueClient;
     private final String catalogId;
 
-    public GlueCatalogService(GlueClient glueClient, String catalogId) {
+    public GlueCatalogService(GlueClient glueClient, String catalogId)
+    {
         requireNonNull(glueClient);
         this.glueClient = glueClient;
         this.catalogId = catalogId;
@@ -45,9 +63,11 @@ public class GlueCatalogService {
 
     /**
      * Get all databases
+     *
      * @return The list of databases
      */
-    public List<Database> getDatabases() {
+    public List<Database> getDatabases()
+    {
         List<Database> allDatabases = new ArrayList<>();
         String nextToken = null;
 
@@ -56,7 +76,7 @@ public class GlueCatalogService {
                     .catalogId(catalogId)
                     .nextToken(nextToken)
                     .build();
-            
+
             GetDatabasesResponse response = glueClient.getDatabases(request);
             allDatabases.addAll(response.databaseList());
             nextToken = response.nextToken();
@@ -68,9 +88,11 @@ public class GlueCatalogService {
     /**
      * Batch delete database.
      * There is no batch delete database in Glue, so we need to delete one by one.
+     *
      * @param databaseNames The list of database names
      */
-    public void batchDeleteDatabase(List<String> databaseNames) {
+    public void batchDeleteDatabase(List<String> databaseNames)
+    {
         for (String databaseName : databaseNames) {
             glueClient.deleteDatabase(DeleteDatabaseRequest.builder()
                     .name(databaseName)
@@ -82,24 +104,26 @@ public class GlueCatalogService {
     /**
      * Batch create database.
      * There is no batch create database in Glue, so we need to create one by one.
+     *
      * @param databaseNamesWithLocationUri The map of database names and location uris
      */
-    public void batchCreateDatabase(Map<String, String> databaseNamesWithLocationUri) {
+    public void batchCreateDatabase(Map<String, String> databaseNamesWithLocationUri)
+    {
         for (Map.Entry<String, String> databaseNameWithLocationUri : databaseNamesWithLocationUri.entrySet()) {
             DatabaseInput databaseInput = DatabaseInput.builder()
                     .name(databaseNameWithLocationUri.getKey())
                     .locationUri(databaseNameWithLocationUri.getValue())
                     .createTableDefaultPermissions(
-                        List.of(
-                            PrincipalPermissions.builder()
-                                .principal(
-                                    DataLakePrincipal.builder()
-                                        .dataLakePrincipalIdentifier("IAM_ALLOWED_PRINCIPALS")
-                                        .build()
-                                )
-                                .permissions(Collections.singletonList(Permission.ALL))
-                                .build()
-                        )
+                            List.of(
+                                    PrincipalPermissions.builder()
+                                            .principal(
+                                                    DataLakePrincipal.builder()
+                                                            .dataLakePrincipalIdentifier("IAM_ALLOWED_PRINCIPALS")
+                                                            .build()
+                                            )
+                                            .permissions(Collections.singletonList(Permission.ALL))
+                                            .build()
+                            )
                     ).build();
 
             CreateDatabaseRequest request = CreateDatabaseRequest.builder()
@@ -111,28 +135,29 @@ public class GlueCatalogService {
         }
     }
 
-
     /**
      * Batch update database.
      * There is no batch update database in Glue, so we need to update one by one.
+     *
      * @param databaseNamesWithLocationUri The map of database names and location uris
      */
-    public void batchUpdateDatabase(Map<String, String> databaseNamesWithLocationUri) {
+    public void batchUpdateDatabase(Map<String, String> databaseNamesWithLocationUri)
+    {
         for (Map.Entry<String, String> databaseNameWithLocationUri : databaseNamesWithLocationUri.entrySet()) {
             DatabaseInput databaseInput = DatabaseInput.builder()
                     .name(databaseNameWithLocationUri.getKey())
                     .locationUri(databaseNameWithLocationUri.getValue())
                     .createTableDefaultPermissions(
-                        List.of(
-                            PrincipalPermissions.builder()
-                                .principal(
-                                    DataLakePrincipal.builder()
-                                        .dataLakePrincipalIdentifier("IAM_ALLOWED_PRINCIPALS")
-                                        .build()
-                                )
-                                .permissions(Collections.singletonList(Permission.ALL))
-                                .build()
-                        )
+                            List.of(
+                                    PrincipalPermissions.builder()
+                                            .principal(
+                                                    DataLakePrincipal.builder()
+                                                            .dataLakePrincipalIdentifier("IAM_ALLOWED_PRINCIPALS")
+                                                            .build()
+                                            )
+                                            .permissions(Collections.singletonList(Permission.ALL))
+                                            .build()
+                            )
                     ).build();
 
             glueClient.updateDatabase(UpdateDatabaseRequest.builder()
@@ -145,10 +170,12 @@ public class GlueCatalogService {
 
     /**
      * Get all tables
+     *
      * @param larkBaseDataSourceId The Lark Base Data Source ID
      * @return The list of tables
      */
-    public List<Table> getTables(String larkBaseDataSourceId) {
+    public List<Table> getTables(String larkBaseDataSourceId)
+    {
         List<Table> allTables = new ArrayList<>();
         String nextToken = null;
 
@@ -158,7 +185,7 @@ public class GlueCatalogService {
                     .databaseName(larkBaseDataSourceId)
                     .nextToken(nextToken)
                     .build();
-            
+
             GetTablesResponse response = glueClient.getTables(request);
             allTables.addAll(response.tableList());
             nextToken = response.nextToken();
@@ -170,9 +197,11 @@ public class GlueCatalogService {
     /**
      * Batch delete table.
      * There is no batch delete table in Glue, so we need to delete one by one.
+     *
      * @param databaseNameAndTables The map of database names and tables
      */
-    public void batchDeleteTable(Map<String, List<Table>> databaseNameAndTables) {
+    public void batchDeleteTable(Map<String, List<Table>> databaseNameAndTables)
+    {
         for (Map.Entry<String, List<Table>> dbEntry : databaseNameAndTables.entrySet()) {
             glueClient.batchDeleteTable(
                     BatchDeleteTableRequest.builder()
@@ -188,17 +217,19 @@ public class GlueCatalogService {
     /**
      * Batch create table.
      * There is no batch create table in Glue, so we need to create one by one.
+     *
      * @param databaseNameAndTableInputs The map of database names and table inputs
      */
-    public void batchCreateTable(Map<String, List<TableInput>> databaseNameAndTableInputs) {
+    public void batchCreateTable(Map<String, List<TableInput>> databaseNameAndTableInputs)
+    {
         for (Map.Entry<String, List<TableInput>> databaseNameAndTableInput : databaseNameAndTableInputs.entrySet()) {
             for (TableInput tableInput : databaseNameAndTableInput.getValue()) {
                 glueClient.createTable(
                         CreateTableRequest.builder()
-                            .databaseName(databaseNameAndTableInput.getKey())
-                            .tableInput(tableInput)
-                            .catalogId(catalogId)
-                            .build());
+                                .databaseName(databaseNameAndTableInput.getKey())
+                                .tableInput(tableInput)
+                                .catalogId(catalogId)
+                                .build());
             }
         }
     }
@@ -206,17 +237,19 @@ public class GlueCatalogService {
     /**
      * Batch update table.
      * There is no batch update table in Glue, so we need to update one by one.
+     *
      * @param databaseNameAndTableInputs The map of database names and table inputs
      */
-    public void batchUpdateTable(Map<String, List<TableInput>> databaseNameAndTableInputs) {
+    public void batchUpdateTable(Map<String, List<TableInput>> databaseNameAndTableInputs)
+    {
         for (Map.Entry<String, List<TableInput>> databaseNameAndTableInput : databaseNameAndTableInputs.entrySet()) {
             for (TableInput tableInput : databaseNameAndTableInput.getValue()) {
                 glueClient.updateTable(
                         UpdateTableRequest.builder()
-                            .databaseName(databaseNameAndTableInput.getKey())
-                            .tableInput(tableInput)
-                            .catalogId(catalogId)
-                            .build());
+                                .databaseName(databaseNameAndTableInput.getKey())
+                                .tableInput(tableInput)
+                                .catalogId(catalogId)
+                                .build());
             }
         }
     }
